src/components/Layout/Layout.module.scss
.background {
  background-color: #272262;
  height: 100vh;
  width: 100vw;
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: -1;
}

.backgroundImage {
  position: relative;
  background-size: cover;
  background-position: center;
  width: 100%;
  height: 100%;
  filter: blur(8px);
}

.foreground {
  background-color: rgba(#000000, 0.7);
  width: 95%;
  display: grid;
  grid-template-columns: 1fr;
  min-height: 100vh;
  margin: 0px auto;
  border-radius: 8px;
}

.content {
  color: white;
  font-size: 1.6rem;
  padding: 16px;
}

.sidePanel {
  display: none;
}

.navbar {
  display: block;
}

body {
  padding-bottom: 50px;
}

@media (min-width: 875px) {
  body {
    padding-bottom: 0px;
  }

  .backgroundImage {
    filter: blur(16px);
  }

  .foreground {
    grid-template-columns: 256px 1fr;
    width: 80%;
  }

  .sidePanel {
    display: block;
  }

  .navbar {
    display: none;
  }

  .content {
    border-left: 1px solid #f26c9d;
  }
}

